updats to support secure clusters

--- a/src/main/resources/jaas/kafka/kafka_jaas.conf
+++ b/src/main/resources/jaas/kafka/kafka_jaas.conf
@@ -1,18 +1,10 @@
 KafkaClient {
    com.sun.security.auth.module.Krb5LoginModule required
    useKeyTab=true
-   keyTab="/Users/gvetticaden/Dropbox/Hortonworks/FIELD-CLOUD/secure-sam-hdf/storm.headless.keytab"
+   keyTab="/Users/gvetticaden/Dropbox/Hortonworks/FIELD-CLOUD/hdf-secure-hdf-3-1-release/gvetticaden.keytab"
    storeKey=true
    useTicketCache=false
    serviceName="kafka"
-   principal="storm-streamanalytics@STREAMANALYTICS";
+   principal="gvetticaden@STREAMANALYTICS";
    
-};
-com.sun.security.jgss.krb5.initiate {
-   com.sun.security.auth.module.Krb5LoginModule required
-   useKeyTab=true
-   keyTab="/Users/gvetticaden/Dropbox/Hortonworks/FIELD-CLOUD/secure-sam-hdf/streamline.service.keytab"
-   storeKey=true
-   useTicketCache=false
-   principal="streamline-streamanalytics@STREAMANALYTICS";
 };
