--- a/src/main/resources/jaas/kafka/kafka_jaas.conf
+++ b/src/main/resources/jaas/kafka/kafka_jaas.conf
@@ -1,10 +1,10 @@
 KafkaClient {
    com.sun.security.auth.module.Krb5LoginModule required
    useKeyTab=true
-   keyTab="/Users/gvetticaden/Dropbox/Hortonworks/FIELD-CLOUD/hdf-secure-hdf-3-1-release/truck_sensor_app_service.keytab"
+   keyTab="/Users/gvetticaden/Dropbox/Hortonworks/FIELD-CLOUD/hdf-secure-hdf-3-1-release/gvetticaden.keytab"
    storeKey=true
    useTicketCache=false
    serviceName="kafka"
-   principal="truck_sensor_app_service@STREAMANALYTICS";
+   principal="gvetticaden@STREAMANALYTICS";
    
 };
