--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>hortonworks.hdf.sam.refapp</groupId>
   	<artifactId>sam-trucking-data-utils</artifactId>
-  	<version>0.4.0.3.1.0.0-564</version>
+  	<version>0.4.0.3.1.0.0-564-HDF-3-2</version>
   	
   	
 	<properties>
