--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>hortonworks.hdf.sam.refapp</groupId>
   	<artifactId>sam-trucking-data-utils</artifactId>
-  	<version>0.5.4.3.3.0.0-123-HDF-3-3</version>
+  	<version>0.7.0.3.4.1.0-5-HDF-3-4</version>
   	
   	
 	<properties>
-		<schema.registry.version>0.5.4.3.3.0.0-165</schema.registry.version>
+		<schema.registry.version>0.7.0.3.4.1.0-5</schema.registry.version>
 		<kite.version>1.0.0</kite.version>
        <jersey.version>2.22.1</jersey.version>
         <jersey-media-multipart.version>2.22.1</jersey-media-multipart.version>	
@@ -16,14 +16,17 @@
         <aws.kinesis.version>1.8.7</aws.kinesis.version>
         <junit.version>4.5</junit.version>
         <log4j2.version>2.6.2</log4j2.version>
-        <kafka.version>2.0.0.3.0.3.0-231</kafka.version>
+        <kafka.version>2.1.0.3.4.1.0-5</kafka.version>
 		<org.springframework.version>4.0.7.RELEASE</org.springframework.version>
-		<org.springframework.spring.context.support>3.2.5.RELEASE</org.springframework.spring.context.support>	        
+		<org.springframework.spring.context.support>3.2.5.RELEASE</org.springframework.spring.context.support>	      
+		<smm.interceptors.version>2.0.0.2.0.0.0-15</smm.interceptors.version>
 	</properties>
 	
 	
 	<dependencies>
 	
+
+			
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
@@ -311,7 +314,17 @@
             <groupId>com.amazonaws</groupId>
             <artifactId>amazon-kinesis-client</artifactId>
             <version>${aws.kinesis.version}</version>
-        </dependency>		
+        </dependency>	
+        
+        <!-- Libraries for SMM End to End Latency Interceptors -->	
+		<dependency>
+			<groupId>com.hortonworks.smm</groupId>
+		    <artifactId>monitoring-interceptors</artifactId>
+		    <version>${smm.interceptors.version}</version>
+		</dependency>        
+
+        
+                
 
 	</dependencies>	
   
