--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<org.springframework.version>4.0.7.RELEASE</org.springframework.version>
 		<org.springframework.spring.context.support>3.2.5.RELEASE</org.springframework.spring.context.support>	      
 		<smm.interceptors.version>2.0.0.2.0.0.0-15</smm.interceptors.version>
+		<avro.version>1.8.2</avro.version>
 	</properties>
 	
 	
@@ -289,7 +290,7 @@
 		<dependency>
 		    <groupId>org.apache.avro</groupId>
 		    <artifactId>avro</artifactId>
-		    <version>1.7.7</version>
+		    <version>${avro.version}</version>
 		</dependency>		
 		<dependency>
 		    <groupId>org.xerial.snappy</groupId>
